tests/ui/unsized-locals/reference-unsized-locals.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/reference-unsized-locals.rs:3:9
   |
LL |     let foo: [u8] = *foo;
   |         ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
help: consider borrowing here
   |
LL |     let foo: &[u8] = *foo;
   |              +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
